--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         stage('Unit Tests - Back End') {
             steps {
                  dir('bug-tracker-backend') {
-                    go test -v ./... 
+                    sh 'go test -v ./...'
                 }
             }
         }
