--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -12,7 +12,13 @@ pipeline {
             }
             steps {
                 dir('bugtracker-backend') {
-                    sh 'go test -v ./...'
+                    sh 'go install github.com/jstemmer/go-junit-report/v2@latest'
+                    sh 'go test ./... -v 2>&1 | go-junit-report > report.xml'
+                }
+            }
+            post { 
+                always{
+                    junit 'bugtracker-backend/report.xml'
                 }
             }
         }
