--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -54,12 +54,22 @@ pipeline {
                     sh '''
                         npm ci
                         npm test
+
+                        # Move test results to reports directory
+                        mkdir -p reports
+                        mv coverage reports/
+
                     '''
                 }
             }
             post { 
                 always{
                     junit 'bugtracker-frontend/test-results.xml'
+                    publishHTML(target: [
+                        reportDir: 'bugtracker-frontend/reports',
+                        reportFiles: 'index.html',
+                        reportName: 'Frontend Coverage Report'
+                    ])
                 }
             }
         }
