--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,82 +2,90 @@ pipeline {
     agent any
 
     stages {
-        stage('Unit Tests - BackEnd') {
-            agent {
-                docker {
-                    image 'golang:tip-trixie'
-                    reuseNode true
-                    args '-e GOCACHE=/tmp/.cache -e GOMODCACHE=/tmp/.modcache'
+        stage("Execute Unit Tests") {
+            parallel {
+                // ----------------------------------------------------
+                // STAGE 1: BACKEND
+                // ----------------------------------------------------
+                stage('Unit Tests - BackEnd') {
+                    agent {
+                        docker {
+                            image 'golang:tip-trixie'
+                            reuseNode true
+                            args '-e GOCACHE=/tmp/.cache -e GOMODCACHE=/tmp/.modcache'
+                        }
+                    }
+                    steps {
+                        dir('bugtracker-backend') {
+                            sh '''
+                                # Install go-junit-report
+                                go install github.com/jstemmer/go-junit-report/v2@latest
+
+                                # Run Tests and generate JUnit report
+                                go test -v ./...  2>&1 | go-junit-report > test-results.xml
+
+                                # Generate Coverage Report
+                                go test -coverprofile=coverage.out -covermode=atomic ./...
+                                go tool cover -html=coverage.out -o coverage.html
+
+                                # Move html report to reports directory
+                                mkdir -p reports
+                                mv coverage.html reports/
+                            '''
+                        }
+                    }
+                    post {
+                        always {
+                            junit 'bugtracker-backend/test-results.xml'
+                            publishHTML(target: [
+                                reportDir: 'bugtracker-backend/reports',
+                                reportFiles: 'coverage.html',
+                                reportName: 'Backend Coverage Report'
+                            ])
+                        }
+                    }
                 }
-            }
-            steps {
-                dir('bugtracker-backend') {
-                    sh '''
-                        # Install go-junit-report
-                        go install github.com/jstemmer/go-junit-report/v2@latest
 
-                        # Run Tests and generate JUnit report
-                        go test -v ./...  2>&1 | go-junit-report > test-results.xml
+                // ----------------------------------------------------
+                // STAGE 2: FRONTEND
+                // ----------------------------------------------------
+                stage('Unit Tests - FrontEnd') {
+                    agent {
+                        docker {
+                            image 'node:20-alpine'
+                            reuseNode true
+                        }
+                    }
+                    steps {
+                        dir('bugtracker-frontend') {
+                            sh '''
+                                # Clean previous reports
+                                rm -rf reports coverage test-results.xml
+                                
+                                # Install dependencies
+                                npm ci
 
-                        # Generate Coverage Report
-                        go test -coverprofile=coverage.out -covermode=atomic ./...
-                        go tool cover -html=coverage.out -o coverage.html
+                                # Run Tests with coverage and generate JUnit report
+                                npm test
 
-                        # Move html report to reports directory
-                        mkdir -p reports
-                        mv coverage.html reports/
-                    '''
+                                # Move test results to reports directory
+                                mkdir -p reports
+                                mv coverage reports/
+                            '''
+                        }
+                    }
+                    post {
+                        always {
+                            junit 'bugtracker-frontend/test-results.xml'
+                            publishHTML(target: [
+                                reportDir: 'bugtracker-frontend/reports/coverage',
+                                reportFiles: 'index.html',
+                                reportName: 'Frontend Coverage Report'
+                            ])
+                        }
+                    }
                 }
-            }
-            post { 
-                    // Publish Test Results and Coverage Report to Jenkins
-                always{
-                    junit 'bugtracker-backend/test-results.xml'
-                    publishHTML(target: [
-                        reportDir: 'bugtracker-backend/reports',
-                        reportFiles: 'coverage.html',
-                        reportName: 'Backend Coverage Report'
-                    ])
-                }
-            }
-        }
-
-        stage('Unit Tests - FrontEnd') {
-            agent {
-                docker {
-                    image 'node:20-alpine'
-                    reuseNode true
-                }
-            }
-            steps {
-                dir('bugtracker-frontend') {
-                    sh '''
-                        # Clean previous reports
-                        rm -rf reports coverage test-results.xml
-                        
-                        # Install dependencies
-                        npm ci
-
-                        # Run Tests with coverage and generate JUnit report
-                        npm test
-
-                        # Move test results to reports directory
-                        mkdir -p reports
-                        mv coverage reports/
-
-                    '''
-                }
-            }
-            post { 
-                always{
-                    junit 'bugtracker-frontend/test-results.xml'
-                    publishHTML(target: [
-                        reportDir: 'bugtracker-frontend/reports/coverage',
-                        reportFiles: 'index.html',
-                        reportName: 'Frontend Coverage Report'
-                    ])
-                }
-            }
-        }
-    }
-}
+            } // Fin Parallel
+        } // Fin Stage "Execute Unit Tests"
+    } // Fin Stages
+} // Fin Pipeline
