update jenkins plugin histiry

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -40,7 +40,9 @@ pipeline {
                             publishHTML(target: [
                                 reportDir: 'bugtracker-backend/reports',
                                 reportFiles: 'coverage.html',
-                                reportName: 'Backend Coverage Report'
+                                reportName: 'Backend Coverage Report',
+                                keepAll: true,
+                                alwaysLinkToLastBuild: true,
                             ])
                         }
                     }
@@ -80,7 +82,9 @@ pipeline {
                             publishHTML(target: [
                                 reportDir: 'bugtracker-frontend/reports/coverage',
                                 reportFiles: 'index.html',
-                                reportName: 'Frontend Coverage Report'
+                                reportName: 'Frontend Coverage Report',
+                                keepAll: true,
+                                alwaysLinkToLastBuild: true,
                             ])
                         }
                     }
