Running application in Jenkins

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -89,6 +89,22 @@ pipeline {
             } // Fin Parallel
         } // Fin Stage "Execute Unit Tests"
     } // Fin Stages
+    // ----------------------------------------------------
+    // STAGE 3: Run APP
+    // ----------------------------------------------------
+
+    stage ("Launch Application"){
+        agent {
+            docker {
+                image 'docker:20-dind'
+                reuseNode true
+                args '-v /var/run/docker.sock:/var/run/docker.sock -u 0'
+            }
+        }
+        steps {
+            sh 'docker compose up --build -d'
+        }
+    }
     post {
         always {
             cleanWs()
