--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -95,7 +95,7 @@ pipeline {
         stage ("Launch Application"){
             agent {
                 docker {
-                    image 'docker:20-dind'
+                    image 'docker:27.5.1'
                     reuseNode true
                     args '-v /var/run/docker.sock:/var/run/docker.sock -u 0'
                 }
