--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,17 +18,10 @@ pipeline {
                     steps {
                         dir('bugtracker-backend') {
                             sh '''
-                                # Install go-junit-report
                                 go install github.com/jstemmer/go-junit-report/v2@latest
-
-                                # Run Tests and generate JUnit report
                                 go test -v ./...  2>&1 | go-junit-report > test-results.xml
-
-                                # Generate Coverage Report
                                 go test -coverprofile=coverage.out -covermode=atomic ./...
                                 go tool cover -html=coverage.out -o coverage.html
-
-                                # Move html report to reports directory
                                 mkdir -p reports
                                 mv coverage.html reports/
                             '''
@@ -42,11 +35,11 @@ pipeline {
                                 reportFiles: 'coverage.html',
                                 reportName: 'Backend Coverage Report',
                                 keepAll: true,
-                                alwaysLinkToLastBuild: true,
+                                alwaysLinkToLastBuild: true
                             ])
                         }
                     }
-                }
+                } // Fin Backend
 
                 // ----------------------------------------------------
                 // STAGE 2: FRONTEND
@@ -61,13 +54,8 @@ pipeline {
                     steps {
                         dir('bugtracker-frontend') {
                             sh '''
-                                # Install dependencies
                                 npm ci
-
-                                # Run Tests with coverage and generate JUnit report
                                 npm test
-
-                                # Move test results to reports directory
                                 mkdir -p reports
                                 mv coverage reports/
                             '''
@@ -75,24 +63,25 @@ pipeline {
                     }
                     post {
                         always {
+                            // Nota: Asegúrate que el archivo xml se genere en la raíz del dir frontend
                             junit 'bugtracker-frontend/test-results.xml'
                             publishHTML(target: [
                                 reportDir: 'bugtracker-frontend/reports/coverage',
                                 reportFiles: 'index.html',
                                 reportName: 'Frontend Coverage Report',
                                 keepAll: true,
-                                alwaysLinkToLastBuild: true,
+                                alwaysLinkToLastBuild: true
                             ])
                         }
                     }
-                }
+                } // Fin Frontend
             } // Fin Parallel
         } // Fin Stage "Execute Unit Tests"
 
         // ----------------------------------------------------
         // STAGE 3: Run APP
         // ----------------------------------------------------
-        stage ("Launch Application"){
+        stage("Launch Application") {
             agent {
                 docker {
                     image 'docker:27.5.1'
@@ -103,8 +92,9 @@ pipeline {
             steps {
                 sh 'docker compose up --build -d'
             }
-        }// Fin Stage "Launch Application"
-        stage ("API Tests"){
+        } // Fin Stage Launch
+
+        stage("API Tests") {
             agent {
                 docker {
                     image 'mcr.microsoft.com/playwright:v1.50.0-jammy'
@@ -119,11 +109,11 @@ pipeline {
                         npm ci
                         npx playwright test
                     '''
+                }
             }
-        }
+        } // Fin Stage API
     } // Fin Stages
-    
-    // Clean workspace and final message
+
     post {
         always {
             cleanWs()
