--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -151,6 +151,21 @@ pipeline {
                 }
             }
         }
+        post {
+            always{
+                junit 'tests-e2e/test-results/results.xml'
+                publishHTML(
+                    target: [
+                        reportDir: 'tests-e2e/playwright-report',
+                        reportFiles: 'index.html',
+                        reportName: 'Playwright E2E Tests Report',
+                        keepAll: true,
+                        alwaysLinkToLastBuild: true
+                    ]
+                )
+
+            }
+        }
     } // Fin Stages
 
     post {
