--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -166,6 +166,38 @@ pipeline {
                 }
             }
         }
+        // ----------------------------------------------------
+        // STAGE 6: Performance Tests
+        // ----------------------------------------------------
+        stage("Performance Tests"){
+            agent {
+                docker {
+                    image 'grafana/k6:latest'
+                    reuseNode true
+                    args '-u root --network=host --entrypoint=""'
+                }
+            }
+            steps {
+                dir('tests-perf'){
+                    sh '''
+                        k6 run script.js
+                    '''
+                }
+            }
+            post {
+                always{
+                    publishHTML(
+                        target: [
+                            reportDir: 'tests-perf',
+                            reportFiles: 'perf-results.html',
+                            reportName: 'K6 Performance Tests Report',
+                            keepAll: true,
+                            alwaysLinkToLastBuild: true
+                        ]
+                    )
+                }
+            }
+        }
         
     } // Fin Stages
 
