Fix: Deploy to Staging tipo

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -210,7 +210,7 @@
                     }
                     environment {
                         FLY_API_TOKEN = credentials('FLY_API_TOKEN')
-                        FLYCTL_INSTALL = "${env.WORKSPACE.replaceALL(' ','')}/.fly"
+                        FLYCTL_INSTALL = "${env.WORKSPACE.replaceAll(' ','')}/.fly"
                         PATH = "$FLYCTL_INSTALL/bin:$PATH"
                         HOME = "${WORKSPACE}"
                     }
