Post Deployment Tests

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -244,6 +244,54 @@
                     }
                     }
                 }
+
+                // ----------------------------------------------------
+                // STAGE 8: Post Deploy Tests
+                // ----------------------------------------------------
+                stage ("Post Deploy Tests"){
+                    when {
+                        expression {
+                            return env.GIT_BRANCH == 'origin/main'
+                        }
+                    }
+                    agent{
+                        docker{
+                            image 'mcr.microsoft.com/playwright:v1.50.0-jammy'
+                            reuseNode true
+                            args '-u 0'
+                        }
+                    }
+                    environment{
+                        PLAYWIGHT_TEST_BASE_URL = 'https://bugtracker-frontend-staging-white-brook-6357.fly.dev'
+                    }
+                    steps{
+                        dir('tests-e2e'){
+                            sh '''
+                                npm ci
+                                npx playwright test
+                            '''
+                        }
+                    }
+                    post {
+                        always{
+                            junit 'tests-e2e/test-results/results.xml'
+                            publishHTML(
+                                target: [
+                                    reportDir: 'tests-e2e/playwright-report',
+                                    reportFiles: 'index.html',
+                                    reportName: 'Playwright Post Deploy Test Report',
+                                    keepAll: true,
+                                    alwaysLinkToLastBuild: true
+                                ]
+                            )
+
+                        }
+                    }
+                }
+
+
+
+
             } // Fin Stages
 
             post {
